[tx] updated from transifex

--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -53,7 +53,7 @@
   <string name="auth_password">Kodeord</string>
   <string name="auth_register">Ny med %1$s</string>
   <string name="sync_string_files">Filer</string>
-  <string name="setup_btn_login">Tilslut</string>
+  <string name="setup_btn_login">Log ind</string>
   <string name="uploader_btn_upload_text">Upload</string>
   <string name="uploader_top_message">Vælg upload mappe</string>
   <string name="uploader_wrn_no_account_title">Ingen konto fundet</string>
@@ -342,6 +342,7 @@
   <string name="log_send_no_mail_app">Ingen app til afsendelse af logs fundet. Installer venligst en mail-app.</string>
   <string name="log_send_mail_subject">%1$s Android-app - logge</string>
   <string name="log_progress_dialog_text">Indlæser data ...</string>
+  <string name="actionbar_select_all">Vælg alle</string>
   <string name="saml_authentication_required_text">Godkendelse påkrævet</string>
   <string name="saml_authentication_wrong_pass">Forkert kodeord</string>
   <string name="actionbar_move">Flyt</string>
