--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -64,7 +64,7 @@
   <string name="auth_password">گذرواژه</string>
   <string name="auth_register">در %1$s تازه واردید؟</string>
   <string name="sync_string_files">پرونده‌ها</string>
-  <string name="setup_btn_login">اتّصال</string>
+  <string name="setup_btn_login">ورود</string>
   <string name="uploader_btn_upload_text">بارگذاری</string>
   <string name="uploader_top_message">گزینش پوشهٔ بارگذاری</string>
   <string name="uploader_wrn_no_account_title">هیچ حسابی پیدا نشد</string>
@@ -338,6 +338,7 @@
   <string name="actionbar_logger">لاگ‌ها</string>
   <string name="log_send_history_button">فرستادن تاریخچه</string>
   <string name="log_progress_dialog_text">بار کردن داده…</string>
+  <string name="actionbar_select_all">انتخاب همه</string>
   <string name="saml_authentication_required_text">احراز هویت مورد نیاز است</string>
   <string name="saml_authentication_wrong_pass">رمز عبور اشتباه است</string>
   <string name="actionbar_move">انتقال</string>
