--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -12,8 +12,11 @@
   <string name="actionbar_see_details">Подробиці</string>
   <string name="actionbar_send_file">Надіслати</string>
   <string name="actionbar_sort">Сортувати</string>
+  <string name="actionbar_descending">За спаданням</string>
   <string name="actionbar_sort_title">Сортувати за</string>
   <string name="actionbar_sort_by_name">А-Я</string>
+  <string name="actionbar_sort_by_date">Старіші - Новіші</string>
+  <string name="actionbar_sort_by_size">Найменші - Найбільші</string>
   <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
   <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Усі файли</string>
@@ -23,6 +26,10 @@
   <string name="drawer_item_uploads_list">Завантажень</string>
   <string name="drawer_close">Закрити</string>
   <string name="drawer_open">Відкрити</string>
+  <string name="drawer_loading_quota">Квота завантаження</string>
+  <string name="drawer_quota">використано %1$s з %2$s (%3$s %%)</string>
+  <string name="drawer_unavailable_free_storage">використано %1$s</string>
+  <string name="drawer_unavailable_used_storage">Немає відомостей про заповненість сховища</string>
   <string name="drawer_feedback">Зворотній зв\'язок</string>
   <string name="drawer_help">Допомога</string>
   <string name="prefs_category_general">Основне</string>
@@ -31,6 +38,11 @@
   <string name="prefs_accounts">Облікові записи</string>
   <string name="prefs_manage_accounts">Управління обліковими записами</string>
   <string name="prefs_passcode">Захистити паролем</string>
+  <string name="prefs_fingerprint_summary">Увімкніть блокування паролем або графічним ключем щоб увімкнути це налаштування</string>
+  <string name="prefs_camera_picture_upload">Завантаження зображень</string>
+  <string name="prefs_camera_picture_upload_summary">Автоматично завантажувати зображення з камери</string>
+  <string name="prefs_camera_video_upload">Завантаження відео</string>
+  <string name="prefs_camera_video_upload_summary">Автоматично завантажувати відео з камери</string>
   <string name="prefs_log_title">Ввімкнути журналювання</string>
   <string name="prefs_log_summary">Використовується для реєстрації помилок</string>
   <string name="prefs_log_title_history">Історія журналювання</string>
@@ -42,15 +54,19 @@
   <string name="prefs_imprint">Відбиток</string>
   <string name="prefs_remember_last_share_location">Запам\'ятати позицію</string>
   <string name="prefs_remember_last_upload_location_summary">Запам\'ятати останній опублікований шлях завантаження</string>
+  <string name="prefs_pattern">Графічний ключ</string>
+  <string name="pattern_enter_pattern">Будь ласка, введіть ваш візерунок</string>
+  <string name="pattern_configure_pattern">Введіть ваш візерунок</string>
   <string name="recommend_subject">Спробуйте %1$s на своєму смартфоні!</string>
   <string name="recommend_text">Пропоную вам користуватися %1$s на вашому смартфоні!\nЗавантажити можна за посиланням: %2$s</string>
+  <string name="auth_failure_snackbar">Автентифікація не виконана</string>
   <string name="auth_check_server">Перевірити сервер</string>
   <string name="auth_host_url">Адреса серверу https://…</string>
   <string name="auth_username">Ім\'я користувача</string>
   <string name="auth_password">Пароль</string>
   <string name="auth_register">Вперше в %1$s?</string>
   <string name="sync_string_files">Файли</string>
-  <string name="setup_btn_login">З\'єднати</string>
+  <string name="setup_btn_login">Увійти</string>
   <string name="uploader_btn_upload_text">Відвантажити</string>
   <string name="uploader_top_message">Вибрати теку для відвантаження</string>
   <string name="uploader_wrn_no_account_title">Не знайдено облікового запису</string>
@@ -76,6 +92,7 @@
   <string name="file_list_file">файл</string>
   <string name="file_list_files">файлів</string>
   <string name="filedetails_select_file">Натисніть на файл для відображення додаткової інформації</string>
+  <string name="upload_files_title">Файли</string>
   <string name="filedetails_size">Розмір:</string>
   <string name="filedetails_type">Тип:</string>
   <string name="filedetails_created">Створено:</string>
@@ -338,6 +355,7 @@
   <string name="log_send_no_mail_app">Не знайдено програм для висилання журналів. Будь ласка, встановіть поштову програму.</string>
   <string name="log_send_mail_subject">%1$s Android лог додатку</string>
   <string name="log_progress_dialog_text">Завантаження даних ...</string>
+  <string name="actionbar_select_all">Вибрати всі</string>
   <string name="saml_authentication_required_text">Потрібна аутентифікація</string>
   <string name="saml_authentication_wrong_pass">Невірний пароль</string>
   <string name="actionbar_move">Перемістити</string>
@@ -450,6 +468,12 @@
   <string name="share_via_link_expiration_date_explanation_label">Публічне посилання спливатиме не пізніше ніж за %1$d днів, після того, як буде створено</string>
   <string name="share_via_link_default_name_template">%1$s посилання</string>
   <string name="private_link_info">Це приватне посилання, його можуть використовувати лише люди, які мають доступ до файлу/папки. Використовуйте його як постійне посилання для себе або для того, щоб вказати іншим посилання на файли.</string>
+  <string name="media_service_notification_channel_name">Музичний програвач</string>
+  <string name="file_sync_notification_channel_name">Синхронізація файлів</string>
+  <string name="file_sync_notification_channel_description">Переглянути результат синхронізації файлів</string>
+  <string name="button_no_thanks_name">НІ, ДЯКУЮ</string>
+  <string name="button_later_name">ПІЗНІШЕ</string>
+  <string name="button_rate_now_name">ОЦІНИТИ ЗАРАЗ</string>
   <plurals name="items_selected_count">
     <item quantity="one">Вибрано %d</item>
     <item quantity="few">Вибрано %d</item>
@@ -457,4 +481,6 @@
     <item quantity="other">Вибрано %d</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_5_title">Потокове відео</string>
+  <string name="welcome_feature_5_text">Переглядайте відео не завантажуючи його</string>
 </resources>
