--- a/res/values-bg-rBG/strings.xml
+++ b/res/values-bg-rBG/strings.xml
@@ -50,7 +50,7 @@
   <string name="auth_password">Парола</string>
   <string name="auth_register">Нов в %1$s?</string>
   <string name="sync_string_files">Файлове</string>
-  <string name="setup_btn_login">Свързване</string>
+  <string name="setup_btn_login">Вписване</string>
   <string name="uploader_btn_upload_text">Качване</string>
   <string name="uploader_top_message">Избери папка за качване</string>
   <string name="uploader_wrn_no_account_title">Няма открит профил</string>
@@ -328,6 +328,7 @@
   <string name="log_send_no_mail_app">Не е намерено приложение за изпращане на логове. Моля инсталирайте e-mail приложение</string>
   <string name="log_send_mail_subject">%1$s Android журнали на приложенията</string>
   <string name="log_progress_dialog_text">Зареждане на данни ...</string>
+  <string name="actionbar_select_all">Избери всички</string>
   <string name="saml_authentication_required_text">Нужна е идентификация</string>
   <string name="saml_authentication_wrong_pass">Грешна парола</string>
   <string name="actionbar_move">Премести</string>
