--- a/res/values-cs-rCZ/strings.xml
+++ b/res/values-cs-rCZ/strings.xml
@@ -2,6 +2,7 @@
 <resources>
   <string name="about_android">%1$s Aplikace pro Android</string>
   <string name="about_version">verze %1$s</string>
+  <string name="actionbar_search">Hledat v tomto adresáři</string>
   <string name="actionbar_sync">Obnovit účet</string>
   <string name="actionbar_upload">Nahrát</string>
   <string name="actionbar_upload_from_apps">Obsah z ostatních aplikací</string>
@@ -57,7 +58,7 @@ Automaticky nahrát video snímané kamerou
   <string name="auth_password">Heslo</string>
   <string name="auth_register">Nováček s %1$s?</string>
   <string name="sync_string_files">Soubory</string>
-  <string name="setup_btn_login">Připojit</string>
+  <string name="setup_btn_login">Přihlásit</string>
   <string name="uploader_btn_upload_text">Nahrát</string>
   <string name="uploader_top_message">Vybrat adresář k nahrávání</string>
   <string name="uploader_wrn_no_account_title">Nenalezen žádný účet</string>
@@ -353,6 +354,7 @@ správce systému.</string>
   <string name="log_send_no_mail_app">Nenalezena aplikace pro odesílání logů. Nainstalujte prosím emailovou aplikaci.</string>
   <string name="log_send_mail_subject">%1$s logy aplikace pro Android</string>
   <string name="log_progress_dialog_text">Nahrávání dat ...</string>
+  <string name="actionbar_select_all">Vybrat vše</string>
   <string name="saml_authentication_required_text">Vyžadováno přihlášení</string>
   <string name="saml_authentication_wrong_pass">Nesprávné heslo</string>
   <string name="actionbar_move">Přesunout</string>
