--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -51,7 +51,7 @@
   <string name="auth_password">Συνθηματικό</string>
   <string name="auth_register">Νέοι στο %1$s;</string>
   <string name="sync_string_files">Αρχεία</string>
-  <string name="setup_btn_login">Σύνδεση</string>
+  <string name="setup_btn_login">Είσοδος</string>
   <string name="uploader_btn_upload_text">Μεταφόρτωση</string>
   <string name="uploader_top_message">Επιλογή φακέλου μεταφορτώσεων</string>
   <string name="uploader_wrn_no_account_title">Δεν βρέθηκε λογαριασμός</string>
@@ -341,6 +341,7 @@
   <string name="log_send_no_mail_app">Δεν βρέθηκε εφαρμογή για αποστολή ιστορικού. Παρακαλούμε εγκαταστήστε μια εφαρμογή αλληλογραφίας.</string>
   <string name="log_send_mail_subject">%1$s αναφορές της εφαρμογής Android</string>
   <string name="log_progress_dialog_text">Φόρτωση δεδομένων....</string>
+  <string name="actionbar_select_all">Επιλογή όλων</string>
   <string name="saml_authentication_required_text">Απαιτείται πιστοποίηση</string>
   <string name="saml_authentication_wrong_pass">Εσφαλμένος κωδικός πρόσβασης</string>
   <string name="actionbar_move">Μετακίνηση</string>
