--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -2,6 +2,7 @@
 <resources>
   <string name="about_android">%1$s Aplicación de Android</string>
   <string name="about_version">versión %1$s</string>
+  <string name="actionbar_search">Buscar en esta carpeta</string>
   <string name="actionbar_sync">Actualizar cuenta</string>
   <string name="actionbar_upload">Subir</string>
   <string name="actionbar_upload_from_apps">Contenido de otras aplicaciones</string>
@@ -41,7 +42,7 @@
   <string name="prefs_fingerprint">Bloqueo de huella digital</string>
   <string name="prefs_fingerprint_summary">Habilitar código de acceso o bloqueo de patrón para habilitar esta opción</string>
   <string name="prefs_camera_picture_upload">Cargas de imágenes</string>
-  <string name="prefs_camera_picture_upload_summary">Cargue automáticamente las fotos tomadas por cámara</string>
+  <string name="prefs_camera_picture_upload_summary">Carga automáticamente las fotos tomadas por cámara</string>
   <string name="prefs_camera_video_upload">Cargas de videos</string>
   <string name="prefs_camera_video_upload_summary">Cargue automáticamente los videos  grabados por cámara</string>
   <string name="prefs_log_title">Habilitar registro</string>
@@ -68,7 +69,7 @@
   <string name="passcode_already_set">El patrón y el código de bloqueo no pueden ser habilitados al mismo tiempo, por favor deshabilite primero el código de bloqueo</string>
   <string name="pattern_no_longer_required">El patrón no será requerido nuevamente</string>
   <string name="pattern_configure_your_pattern_explanation">El patrón será requerido cada vez que se inicie la aplicación</string>
-  <string name="illegal_argument_exception_message">Se necesita una acción valida</string>
+  <string name="illegal_argument_exception_message">Se necesita una ACCIÓN válida</string>
   <string name="recommend_subject">¡Prueba  %1$s en su smarthphone!</string>
   <string name="recommend_text">¡Quiero invitarle a usar %1$s en su smartphone!\nDescárguelo aquí: %2$s</string>
   <string name="auth_failure_snackbar">Fallo en la autenticación</string>
@@ -79,7 +80,7 @@
   <string name="auth_password">Contraseña</string>
   <string name="auth_register">¿Nuevo en %1$s?</string>
   <string name="sync_string_files">Archivos</string>
-  <string name="setup_btn_login">Conectar</string>
+  <string name="setup_btn_login">Iniciar sesión</string>
   <string name="uploader_btn_upload_text">Subir</string>
   <string name="uploader_top_message">Elige carpeta de subida</string>
   <string name="uploader_wrn_no_account_title">No se encontró la cuenta</string>
@@ -384,6 +385,7 @@
   <string name="log_send_no_mail_app">Aplicación para enviar registros no encontrada. Por favor instale una aplicación de correo.</string>
   <string name="log_send_mail_subject">Se han encontrado %1$s logs de la app Android</string>
   <string name="log_progress_dialog_text">Cargando datos ...</string>
+  <string name="actionbar_select_all">Seleccionar todo</string>
   <string name="saml_authentication_required_text">Se necesita autenticación</string>
   <string name="saml_authentication_wrong_pass">Contraseña incorrecta</string>
   <string name="actionbar_move">Mover</string>
@@ -527,5 +529,11 @@
   <string name="welcome_feature_4_text">Tus fotografías/vídeos automáticamente se subirán</string>
   <string name="welcome_feature_5_title">Retransmitir video</string>
   <string name="welcome_feature_5_text">Reproduce tus videos sin descargarlos</string>
-  <string name="no_borwser_installed_alert">No hay navegador instalado, Por favor, instale uno para poder realizar un login seguro</string>
+  <string name="welcome_feature_6_title">Cuota de usuario</string>
+  <string name="welcome_feature_6_text">Sepa su espacio usado y disponible</string>
+  <string name="welcome_feature_7_title">Nuevos iconos</string>
+  <string name="welcome_feature_7_text">Para descargar y establecer archivos disp. sin conexión</string>
+  <string name="welcome_feature_8_title">Nuevos pines</string>
+  <string name="welcome_feature_8_text">Sincronización , descarga y ficheros fuera de línea</string>
+  <string name="no_borwser_installed_alert">No hay un navegador instalado, Por favor, instale uno para poder realizar un login seguro</string>
 </resources>
