--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -59,7 +59,7 @@ Téléchargez-le ici : %2$s</string>
   <string name="auth_password">Mot de passe</string>
   <string name="auth_register">Nouveau dans %1$s ?</string>
   <string name="sync_string_files">Fichiers</string>
-  <string name="setup_btn_login">Connecter</string>
+  <string name="setup_btn_login">Se connecter</string>
   <string name="uploader_btn_upload_text">Téléverser</string>
   <string name="uploader_top_message">Choisir le dossier de téléversement</string>
   <string name="uploader_wrn_no_account_title">Aucun compte n\'a été trouvé</string>
@@ -365,6 +365,7 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="log_send_no_mail_app">Aucune application n\'a été trouvée pour envoyer les journaux. Veuillez installer une application de messagerie !</string>
   <string name="log_send_mail_subject">Journaux de l\'application Android %1$s</string>
   <string name="log_progress_dialog_text">Chargement des données …</string>
+  <string name="actionbar_select_all">Tout sélectionner</string>
   <string name="saml_authentication_required_text">Authentification requise</string>
   <string name="saml_authentication_wrong_pass">Mot de passe incorrect</string>
   <string name="actionbar_move">Déplacer</string>
