--- a/res/values-lt-rLT/strings.xml
+++ b/res/values-lt-rLT/strings.xml
@@ -338,6 +338,7 @@
   <string name="log_send_no_mail_app">Nėra programos siųsti laiškam. Įdiekite pašto programa.</string>
   <string name="log_send_mail_subject">%1$s Android žurnalai</string>
   <string name="log_progress_dialog_text">Įkeliami duomenys ...</string>
+  <string name="actionbar_select_all">Pažymėti viską</string>
   <string name="saml_authentication_required_text">Reikalinga autentikacija</string>
   <string name="saml_authentication_wrong_pass">Neteisingas slaptažodis</string>
   <string name="actionbar_move">perkelti</string>
