--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -71,7 +71,7 @@
   <string name="auth_password">Passord</string>
   <string name="auth_register">Ny med %1$s?</string>
   <string name="sync_string_files">Filer</string>
-  <string name="setup_btn_login">Koble til</string>
+  <string name="setup_btn_login">Logg inn</string>
   <string name="uploader_btn_upload_text">Last opp</string>
   <string name="uploader_top_message">Velg mappe for opplasting</string>
   <string name="uploader_wrn_no_account_title">Ingen konto funnet</string>
@@ -376,6 +376,7 @@
   <string name="log_send_no_mail_app">Ingen app for sending av logger funnet. Installer epost-app.</string>
   <string name="log_send_mail_subject">%1$s Android app logger</string>
   <string name="log_progress_dialog_text">Laster data ...</string>
+  <string name="actionbar_select_all">Velg alle</string>
   <string name="saml_authentication_required_text">Autentisering kreves</string>
   <string name="saml_authentication_wrong_pass">Feil passord</string>
   <string name="actionbar_move">Flytt</string>
