--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -70,7 +70,7 @@ Download hier: %2$s</string>
   <string name="auth_password">Wachtwoord</string>
   <string name="auth_register">Nieuw bij %1$s?</string>
   <string name="sync_string_files">Bestanden</string>
-  <string name="setup_btn_login">Verbinden</string>
+  <string name="setup_btn_login">Meld u aan</string>
   <string name="uploader_btn_upload_text">Uploaden</string>
   <string name="uploader_top_message">Kies een uploadmap</string>
   <string name="uploader_wrn_no_account_title">Geen account gevonden</string>
@@ -377,6 +377,7 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="log_send_no_mail_app">Geen applicatie gevonden voor het versturen van de logs. Installeer een mail applicatie.</string>
   <string name="log_send_mail_subject">%1$s Android app logs</string>
   <string name="log_progress_dialog_text">Laden data …</string>
+  <string name="actionbar_select_all">Alles selecteren</string>
   <string name="saml_authentication_required_text">Authenticatie vereist</string>
   <string name="saml_authentication_wrong_pass">Onjuist wachtwoord</string>
   <string name="actionbar_move">Verplaatsen</string>
@@ -435,6 +436,8 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="share_via_link_expiration_date_label">Vervaltermijn</string>
   <string name="share_via_link_password_label">Wachtwoord</string>
   <string name="share_via_link_password_title">Beveiligd</string>
+  <string name="share_via_link_edit_permission_read_only_label">Download / Bekijk</string>
+  <string name="share_via_link_edit_permission_read_and_write_label">Download / Bekijk / Upload</string>
   <string name="share_get_public_link_button">Ophalen link</string>
   <string name="share_with_title">Deel met ...</string>
   <string name="share_with_edit_title">Deel met %1$s</string>
