--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -55,7 +55,7 @@
   <string name="auth_password">Geslo</string>
   <string name="auth_register">Ali ste novi uporabnik sistema %1$s?</string>
   <string name="sync_string_files">Datoteke</string>
-  <string name="setup_btn_login">Poveži</string>
+  <string name="setup_btn_login">Prijava</string>
   <string name="uploader_btn_upload_text">Pošlji</string>
   <string name="uploader_top_message">Izbor mape za pošiljanje</string>
   <string name="uploader_wrn_no_account_title">Uporabniškega računa ni mogoče najti</string>
@@ -353,6 +353,7 @@
   <string name="log_send_no_mail_app">Ni programa za pošiljanje dnevniških datotek. Namestite vsaj poštni program.</string>
   <string name="log_send_mail_subject">%1$s dnevniki programa</string>
   <string name="log_progress_dialog_text">Poteka nalaganje podatkov ...</string>
+  <string name="actionbar_select_all">izberi vse</string>
   <string name="saml_authentication_required_text">Zahtevana je overitev</string>
   <string name="saml_authentication_wrong_pass">Napačno geslo</string>
   <string name="actionbar_move">Premakni</string>
