--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -14,6 +14,8 @@
   <string name="actionbar_sort">Sortera</string>
   <string name="actionbar_sort_title">Sortera efter</string>
   <string name="actionbar_sort_by_name">A-Ö</string>
+  <string name="actionbar_sort_by_date">Äldst - Nyast</string>
+  <string name="actionbar_sort_by_size">Minst - Störst</string>
   <!--TODO re-enable when "Accounts" is available in Navigation Drawer-->
   <!--<string name="drawer_item_accounts">Accounts</string>-->
   <string name="drawer_item_all_files">Alla filer</string>
@@ -23,6 +25,8 @@
   <string name="drawer_item_uploads_list">Uppladdningar</string>
   <string name="drawer_close">Stäng</string>
   <string name="drawer_open">Öppna</string>
+  <string name="drawer_quota">%1$s av%2$s använt (%3$s %%)</string>
+  <string name="drawer_unavailable_free_storage">%1$s används</string>
   <string name="drawer_feedback">Feedback</string>
   <string name="drawer_help">Hjälp</string>
   <string name="prefs_category_general">Allmänt</string>
@@ -50,7 +54,7 @@
   <string name="auth_password">Lösenord</string>
   <string name="auth_register">Ny på %1$s?</string>
   <string name="sync_string_files">Filer</string>
-  <string name="setup_btn_login">Anslut</string>
+  <string name="setup_btn_login">Logga in</string>
   <string name="uploader_btn_upload_text">Ladda upp</string>
   <string name="uploader_top_message">Välj mapp för uppladdning</string>
   <string name="uploader_wrn_no_account_title">Hittade inget konto</string>
@@ -340,6 +344,7 @@
   <string name="log_send_no_mail_app">Kunde inte hitta program för att skicka loggar. Installera ett e-postprogram</string>
   <string name="log_send_mail_subject">%1$s Android app logs</string>
   <string name="log_progress_dialog_text">Laddar data ...</string>
+  <string name="actionbar_select_all">Välj allt</string>
   <string name="saml_authentication_required_text">Autentisering krävs</string>
   <string name="saml_authentication_wrong_pass">Fel lösenord</string>
   <string name="actionbar_move">Flytta</string>
