--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -51,7 +51,7 @@
   <string name="auth_password">Parola</string>
   <string name="auth_register">%1$s sizin için yeni mi?</string>
   <string name="sync_string_files">Dosyalar</string>
-  <string name="setup_btn_login">Bağlan</string>
+  <string name="setup_btn_login">Giriş yap</string>
   <string name="uploader_btn_upload_text">Yükle</string>
   <string name="uploader_top_message">Yükleme klasörü seç</string>
   <string name="uploader_wrn_no_account_title">Hesap bulunamadı</string>
@@ -336,6 +336,7 @@
   <string name="log_send_no_mail_app">Kayıtları göndermek için uygulama bulunamadı. Lütfen bir e-posta uygulaması yükleyin!</string>
   <string name="log_send_mail_subject">%1$s Android uygulama kayıtları</string>
   <string name="log_progress_dialog_text">Veri yükleniyor…</string>
+  <string name="actionbar_select_all">Tümünü seç</string>
   <string name="saml_authentication_required_text">Kimlik doğrulama gerekli</string>
   <string name="saml_authentication_wrong_pass">Hatalı parola</string>
   <string name="actionbar_move">Taşı</string>
