--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -54,7 +54,7 @@
   <string name="auth_password">密碼</string>
   <string name="auth_register">新增到 %1$s?</string>
   <string name="sync_string_files">檔案</string>
-  <string name="setup_btn_login">連線</string>
+  <string name="setup_btn_login">登入</string>
   <string name="uploader_btn_upload_text">上傳</string>
   <string name="uploader_top_message">選擇上傳的資料夾</string>
   <string name="uploader_wrn_no_account_title">找不到帳號</string>
@@ -339,6 +339,7 @@
   <string name="log_send_no_mail_app">沒有傳送紀錄的軟體. 請安裝郵件軟體</string>
   <string name="log_send_mail_subject">%1$s Android 應用程式記錄</string>
   <string name="log_progress_dialog_text">裝載資料中...</string>
+  <string name="actionbar_select_all">全選</string>
   <string name="saml_authentication_required_text">必須驗證</string>
   <string name="saml_authentication_wrong_pass">密碼錯誤</string>
   <string name="actionbar_move">移動</string>
