--- a/docs/modules/ROOT/pages/release_notes.adoc
+++ b/docs/modules/ROOT/pages/release_notes.adoc
@@ -1,5 +1,4 @@
-Release Notes
-=============
+= Release Notes
 
 * link:#changes-in-2.7.0[Changes in 2.7.0]
 * link:#changes-in-2.6.0[Changes in 2.6.0]
@@ -9,11 +8,9 @@ Release Notes
 * link:#changes-in-2.1.1[Changes in 2.1.1]
 * link:#changes-in-2.1.0[Changes in 2.1.0]
 
-Changes in 2.7.0
-----------------
+== Changes in 2.7.0
 
-Additions
-~~~~~~~~~
+=== Additions
 
 * Fingerprint lock
 * Pattern lock
@@ -21,76 +18,55 @@ Additions
 * GIF support
 * New features wizard
 
-Fixes
-~~~~~
+=== Fixes
 
 * Display file size during upload
 * Hide always visible notification in Android 8
 * Animations when switching folders
 
-Changes in 2.6.0
-----------------
+== Changes in 2.6.0
 
-Additions
-~~~~~~~~~
+=== Additions
 
-* Camera uploads, replacing instant uploads (Android 5 or higher
-required)
+* Camera uploads, replacing instant uploads (Android 5 or higher required)
 * Android 8 support
 * Notification channels (Android 8 required)
-* Private link (OC X required)
+* Private link (ownCloud X required)
 
-Fixes
-~~~~~
+=== Fixes
 
 * Typos in some translations
 
-Changes in 2.5.0
-----------------
+== Changes in 2.5.0
 
-Additions
-~~~~~~~~~
+=== Additions
 
-* Added OAuth 2 support: https://cloud.owncloud.com/index.php/f/4181598
-* Show file listing option (anonymous upload) when sharing a folder
-(_requires ownCloud X_): https://cloud.owncloud.com/index.php/f/4181604
+* https://cloud.owncloud.com/index.php/f/4181598:[Added OAuth 2 support] 
+* https://cloud.owncloud.com/index.php/f/4181604:[Show file listing option (anonymous upload) when sharing a folder (_requires ownCloud X_)]
 
-Changes in 2.4.0
-----------------
+== Changes in 2.4.0
 
-Additions
-~~~~~~~~~
+=== Additions
 
-* Video streaming: https://cloud.owncloud.com/index.php/f/4095432
-* Multiple public links per file (_requires ownCloud X_):
-https://cloud.owncloud.com/index.php/f/4095427
+* https://cloud.owncloud.com/index.php/f/4095432:[Video streaming] 
+* https://cloud.owncloud.com/index.php/f/4095427:[Multiple public links per file (_requires ownCloud X_)]
 
-Changes in 2.2.0
-----------------
+== Changes in 2.2.0
 
-Additions
-~~~~~~~~~
+=== Additions
 
 * New navigation drawer, with avatar and account switch
-* New account manager, accessible from navigation drawer:
-https://cloud.owncloud.com/index.php/f/4008948
-* Can set folders as Available Offline:
-https://cloud.owncloud.com/index.php/f/4008946
+* https://cloud.owncloud.com/index.php/f/4008948:[New account manager, accessible from navigation drawer]
+* https://cloud.owncloud.com/index.php/f/4008946:[Can set folders as Available Offline]
 
-Changes in 2.1.1
-----------------
+== Changes in 2.1.1
 
-Additions
-~~~~~~~~~
+=== Additions
 
-* Select your camera folder to upload pictures or videos from any camera
-app: https://cloud.owncloud.com/index.php/f/3931961
+* https://cloud.owncloud.com/index.php/f/3931961:[Select your camera folder to upload pictures or videos from any camera app]
 
-Changes in 2.1.0
-----------------
+== Changes in 2.1.0
 
-Additions
-~~~~~~~~~
+=== Additions
 
-* Select and handle multiple files:
-https://cloud.owncloud.com/index.php/f/3923478
+* https://cloud.owncloud.com/index.php/f/3923478:[Select and handle multiple files]
